# exoclasma-index

./: README.md  pyproject.toml
src/exoclasma_index/: config.json  exoclasma_index.py
tests/: testAddRemoveRS.sh  testCapture.sh  testContigs.sh  testList.sh  testReference.sh  testReferenceFilter.sh  testRestrictionSites.sh
tests/testdata/: TestCapture_sacCer3_Exome.bed
