[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "exoclasma-index"
version = "0.9.1"
authors = [
	{ name = "Emil Viesná", email="regnveig@yandex.ru" },
	{ name = "Minja Fishman", email="minja-f@yandex.ru" }
]
description = "Reference Sequence and Capture Intervals Preparation for ExoClasma Suite"
keywords = ["bioinformatics", "fasta", "bed", "indexing", "restrictase"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.6"
dependencies = [
	"biopython >= 1.76",
	"pandas >= 1.0.3"
]
classifiers = [
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Operating System :: POSIX :: Linux",
	"Natural Language :: English",
	"Development Status :: 3 - Alpha",
	"Environment :: Console"
]

[project.scripts]
exoclasma-index = "exoclasma_index.exoclasma_index:main"

[project.urls]
"Homepage" = "https://github.com/regnveig/exoclasma-index"
"Bug Tracker" = "https://github.com/regnveig/exoclasma-index/issues"
